solved horizontal scroll issue by resizing tech icons

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,10 +1,13 @@
 .container {
+  position: absolute;
   min-height: 100vh;
   padding: 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  width: 100%;
+  border: 1px solid blue;
 }
 
 .main {
